  difficult, since player monsters now have a greater number of artifacts to
  be generated with.
- Summon nasties has been expanded to accommodate new monsters.
- High level adventurers will arise as spectres in their bones files, a more
  powerful type of ghost which is capable of using weapons. Inspired by a YANI
  by AmyBSOD and aosdict that was archived on the wiki's YANI list.
- Additional achievements are tracked in the xlogfile that pertain to this
  variant.
- Pets can now potentially become stunned or invisible by eating the right
  kind of corpse.
- Birds are now a potential kind of pet. You begin with a little bird, which can
  grow up into a falcon and then into a giant falcon. They are balanced around
  the existing pet options.
- Death is generated with a scythe.
- Monsters with heads now "swallow" you instead of "engulfing" you.
- If you are playing an infernal or polymorphed into a silver-hating creature,
  silver will deal an extra 1-20 damage to you.
- Furnaces will spawn in the dungeon. Useful for getting rid of items you don't
  want lying around, and for dipping lavaproof items in for possible effects.
  Please do not try drinking out of a furnace.
- Upon performing the invocation ritual, all unique demons that have not yet
  been generated will appear and immediately teleport to random levels in the
  game. The dungeon will begin to crumble, causing earthquakes centered on you
  occasionally. As you begin to ascend the dungeon, monster spawn rate will
  speed up.
- While you have the amulet, leprechauns are generated awake.
- Added an easter egg message during ascension.
- Trees generate randomly in the dungeon. They use the same code as fountains
  and other features, so will not block the exit.
- Monsters now are more polite, and introduce themselves before trying to
  seduce you. In the future, would like to expand this to monsters introducing
  themselves in other ways.